[tool.poetry]
name = "python-web-module-11"
version = "0.1.0"
description = ""
authors = ["Artem <artem.zimovets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.3"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
